tests/e2e/var_scope_service.error
Error: syntax error in story at line 4, column 1

4|    my_service.length()
      ^^^^^^^^^^

E0101: Variable `my_service` has not been defined.
